--- a/image-tools.yml
+++ b/image-tools.yml
@@ -1,7 +1,7 @@
 name: imagetools
 channels:
-  - ome
   - bioconda
+  - ome
   - conda-forge
   - defaults
 dependencies:
@@ -12,7 +12,8 @@ dependencies:
   - backcall=0.2.0=pyh9f0ad1d_0
   - backports=1.0=py_2
   - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - bftools=5.7.1=hdfd78af_1
+  - bftools=6.10.0=0
+  - bftools-libs=6.10.0=0
   - bioformats2raw=0.4.0=0
   - bioformats2raw-libs=0.4.0=0
   - blosc=1.21.1=h97e831e_3
@@ -28,14 +29,14 @@ dependencies:
   - charls=2.3.4=he49afe7_0
   - cloudpickle=2.1.0=pyhd8ed1ab_0
   - cycler=0.11.0=pyhd8ed1ab_0
-  - cytoolz=0.11.0=py310hca72f7f_0
+  - cytoolz=0.11.2=py310h1961e1f_2
   - dask-core=2022.9.0=pyhd8ed1ab_0
   - dav1d=1.0.0=hac89ed1_1
   - decorator=5.1.1=pyhd8ed1ab_0
   - entrypoints=0.4=pyhd8ed1ab_0
   - executing=1.0.0=pyhd8ed1ab_0
   - fasteners=0.17.3=pyhd8ed1ab_0
-  - fonttools=4.25.0=pyhd3eb1b0_0
+  - fonttools=4.37.0=py310h90acd4f_0
   - freetype=2.12.1=h3f81eb7_0
   - fsspec=2022.8.2=pyhd8ed1ab_0
   - giflib=5.2.1=hbcb3906_2
@@ -70,7 +71,7 @@ dependencies:
   - libnghttp2=1.47.0=h5aae05b_1
   - libopenblas=0.3.21=openmp_h429af6e_3
   - libpng=1.6.37=h5481273_4
-  - libsqlite=3.39.2=h5a3d3bf_1
+  - libsqlite=3.39.3=ha978bb4_0
   - libssh2=1.10.0=h47af595_3
   - libtiff=4.4.0=h5e0c7b4_3
   - libwebp-base=1.2.4=h775f41a_0
@@ -87,7 +88,7 @@ dependencies:
   - matplotlib-base=3.5.3=py310h1bfeb8c_2
   - matplotlib-inline=0.1.6=pyhd8ed1ab_0
   - msgpack-python=1.0.4=py310habb735a_0
-  - munkres=1.1.4=pyh9f0ad1d_0
+  - munkres=1.0.7=py_1
   - ncurses=6.3=h96cf925_1
   - networkx=2.8.6=pyhd8ed1ab_0
   - numcodecs=0.10.2=py310h154be8b_0
@@ -130,6 +131,7 @@ dependencies:
   - typing-extensions=4.3.0=hd8ed1ab_0
   - typing_extensions=4.3.0=pyha770c72_0
   - tzdata=2022c=h191b570_0
+  - unicodedata2=14.0.0=py310h1961e1f_1
   - wcwidth=0.2.5=pyh9f0ad1d_2
   - wheel=0.37.1=pyhd8ed1ab_0
   - xorg-libxau=1.0.9=h35c211d_0
